Finished Swagger and Data Filter, Data Register, Service Register and More
